fix(ui): fix overflow behavior of annotation list and segment list
Fixes issue #137.

--- a/src/neuroglancer/ui/annotations.css
+++ b/src/neuroglancer/ui/annotations.css
@@ -28,6 +28,8 @@
   overflow-y: auto;
   height: 0px;
   flex: 1;
+  flex-basis: 0px;
+  min-height: 0px;
 }
 
 .neuroglancer-annotation-layer-view {
