--- a/src/neuroglancer/widget/segment_set_widget.css
+++ b/src/neuroglancer/widget/segment_set_widget.css
@@ -22,6 +22,8 @@
   flex: 1;
   overflow-y: auto;
   height: 0px;
+  min-height: 0px;
+  flex-basis: 0px;
 }
 
 .segment-set-widget .item-container {
